--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ $enable-responsive-font-sizes: true;
 @import "bootstrap/scss/bootstrap";
 
 
-/********** Template CSS ************/
+/********** Website CSS ************/
 h1,
 .font-weight-bolder {
     font-weight: 900 !important;
